--- a/src/sass/base/_media.sass
+++ b/src/sass/base/_media.sass
@@ -1,19 +1,19 @@
-
 //=====================================================================================================================
-@media (max-width: 1160px)
-	//----FORM---------------------------------------------------------------------------------------------------------
-
-
-//=====================================================================================================================
+	//----FOOTER-------------------------------------------------
 
 @media (max-width: 1112px) //1ST BRAKE
-	//---MAINPAGE----------------------------------------------------------------------------------------------------------
+	//---MAINPAGE------------------------------------------------
 	.oneLine
 		flex-direction: column
 		align-items: flex-end
 	.main
 		height: 970px
 		background: url(../img/bg/main_bg.jpg) 36% 0%/cover no-repeat
+		&__title 
+			padding-top: 5rem
+		&__subtitle 
+			font-size: 1.8rem
+			padding-bottom: 2.667rem
 	nav
 		width: 100%
 	.container-navbar
@@ -24,15 +24,10 @@
 	.main-search
 		width: 223px
 		margin: 2.1rem 1.4rem 0 0
-	.main__title 
-		padding-top: 5rem
-	.main__subtitle 
-		font-size: 1.8rem
-		padding-bottom: 2.667rem
 	.container
 		@include padFirst
 
-	//----TABS---------------------------------------------------------------------------------------------------------
+	//----TABS---------------------------------------------------
 	.tabs
 		@include mgFirst
 	.tabs-item
@@ -47,17 +42,17 @@
 		&__p-second
 			width: 90.8%
 
-	//----GALLERY---------------------------------------------------------------------------------------------------------
+	//----GALLERY------------------------------------------------
 	.container_gallery
 		@include padFirst
 	.gallery
 		@include mgFirst
 	
-	//----ABOUT---------------------------------------------------------------------------------------------------------
+	//----ABOUT--------------------------------------------------
 	.about
 		@include mgFirst
 	
-	//----FORM---------------------------------------------------------------------------------------------------------
+	//----FORM---------------------------------------------------
 	.container-form
 		@include padFirst
 	.form
@@ -68,25 +63,22 @@
 		padding: 3rem 3rem
 		height: 100%
 	
-	//----FOOTER---------------------------------------------------------------------------------------------------------
 
 //=====================================================================================================================
 
 @media (max-width: 1016px)
-	//----FORM---------------------------------------------------------------------------------------------------------
+	//----FORM---------------------------------------------------
 	.form
 		&__contacts-wrapper
 			padding: 2rem 2rem
 	.form-main
 		padding: 2rem 2rem
 
-	//----FOOTER---------------------------------------------------------------------------------------------------------
-
 
 //=====================================================================================================================
 
 @media (max-width: 927px)
-	//----FORM---------------------------------------------------------------------------------------------------------
+	//----FORM---------------------------------------------------
 	.container-form
 		flex-direction: column
 	.form
@@ -105,13 +97,11 @@
 		border: 2px solid $pink_color
 		width: 100%
 
-	//----FOOTER---------------------------------------------------------------------------------------------------------
-
-
 
 //=====================================================================================================================
+
 @media (max-width: 858px) //SECOND BRAKE
-	//---MAINPAGE----------------------------------------------------------------------------------------------------------
+	//---MAINPAGE----------------------------------
 	.container
 		@include padSecond
 	.main
@@ -133,21 +123,21 @@
 		&__textarea
 			font-size: 1rem
 
-	//----TABS---------------------------------------------------------------------------------------------------------
+	//----TABS---------------------------------------------------
 	.tabs
 		@include mgSecond
 
-	//----GALLERY---------------------------------------------------------------------------------------------------------
+	//----GALLERY------------------------------------------------
 	.gallery
 		@include mgSecond
 	.container__gallery
 		padding: 2.6667rem 1.2rem 0 2.6667rem
 	
-	//----ABOUT---------------------------------------------------------------------------------------------------------
+	//----ABOUT--------------------------------------------------
 	.about
 		@include mgSecond
 	
-	//----FORM---------------------------------------------------------------------------------------------------------
+	//----FORM---------------------------------------------------
 	.form
 		@include mgSecond
 	.container-form
@@ -155,11 +145,10 @@
 	.form__contacts
 		width: 110%
 
-	//----FOOTER---------------------------------------------------------------------------------------------------------
-
 //=====================================================================================================================
+
 @media (max-width: 807px)
-	//----ABOUT---------------------------------------------------------------------------------------------------------
+	//----ABOUT--------------------------------------------------
 	.about
 		&__p
 			&:first-child
@@ -169,11 +158,11 @@
 			float: none
 			margin: 0 auto
 	
-	//----FORM---------------------------------------------------------------------------------------------------------
+	//----FORM---------------------------------------------------
 	.form__contacts
 		width: 111%
 
-	//----FOOTER---------------------------------------------------------------------------------------------------------
+	//----FOOTER-------------------------------------------------
 	.footer__block
 		&:nth-child(3)
 			display: none
@@ -181,7 +170,7 @@
 //=====================================================================================================================
 
 @media (max-width: 804px)
-	//----TABS---------------------------------------------------------------------------------------------------------
+	//----TABS---------------------------------------------------
 	.tabs
 		&__btn
 			padding: 2.134rem 4.334rem 2.4667rem 4.334rem
@@ -190,22 +179,10 @@
 	.tabs-item__price
 		width: 22%
 
-	//----GALLERY---------------------------------------------------------------------------------------------------------
-	//.gallery
-		//@include mgFirst
-	
-	//----ABOUT---------------------------------------------------------------------------------------------------------
-	//.about
-		//@include mgFirst
-	
-	//----FORM---------------------------------------------------------------------------------------------------------
-
-	//----FOOTER---------------------------------------------------------------------------------------------------------
-
 //=====================================================================================================================
 
 @media (max-width: 791px)
-	//---MAINPAGE----------------------------------------------------------------------------------------------------------
+	//---MAINPAGE------------------------------------------------
 	.container
 		@include padThird
 	.oneLine-mobile
@@ -283,30 +260,31 @@
 	.main-contacts
 		display: flex
 
-	//----TABS---------------------------------------------------------------------------------------------------------
+	//----TABS---------------------------------------------------
 	.tabs-item__wrapper-descr
 		padding: 0 2.1334rem 0 2.334rem
 
-	//----GALLERY---------------------------------------------------------------------------------------------------------
+	//----GALLERY------------------------------------------------
 	.container_gallery
 		padding: 2.5rem 0rem 0 1rem
 	.gallery__wrapper
 		margin: 3.334rem 0 0 0
 	
-	//----FORM---------------------------------------------------------------------------------------------------------
+	//----FORM---------------------------------------------------
 	.container-form
 		padding: 2.5rem 1rem 0 1rem
 	.form__contacts
 		width: 104%
 
-	//----FOOTER---------------------------------------------------------------------------------------------------------
+	//----FOOTER-------------------------------------------------
 	.container-footer
 		padding: 0 1rem
 
 
 //=====================================================================================================================
+
 @media (max-width: 732px)
-	//----TABS---------------------------------------------------------------------------------------------------------
+	//----TABS---------------------------------------------------
 	.tabs
 		&__btn
 			padding: 2.134rem 3rem 2.4667rem 3rem
@@ -320,14 +298,10 @@
 			&:first-child
 				padding-top: 0
 	
-	//----FORM---------------------------------------------------------------------------------------------------------
-
-	//----FOOTER---------------------------------------------------------------------------------------------------------
-
 //=====================================================================================================================
 
 @media (max-width: 602px)
-	//----FORM---------------------------------------------------------------------------------------------------------
+	//----FORM---------------------------------------------------
 	.form__title__black
 		text-align: center
 	.form-columns
@@ -336,7 +310,7 @@
 	.form-column
 		width: 100%
 
-	//----FOOTER---------------------------------------------------------------------------------------------------------
+	//----FOOTER-------------------------------------------------
 	.footer__block
 		&:nth-child(2)
 			display: none
@@ -344,7 +318,7 @@
 //=====================================================================================================================
 
 @media (max-width: 512px) //THIRD BRAKE
-	//---MAINPAGE----------------------------------------------------------------------------------------------------------
+	//---MAINPAGE------------------------------------------------
 	.main
 		height: 970px
 		background: url(../img/bg/main_bg.jpg) 26% 0%/cover no-repeat
@@ -353,7 +327,7 @@
 		&__textarea
 			display: none
 
-	//----TABS---------------------------------------------------------------------------------------------------------
+	//----TABS---------------------------------------------------
 	.tabs
 		@include mgThird
 		&__btn
@@ -368,7 +342,7 @@
 		&__wrapper-descr
 			padding: 0 0 0 2.334rem
 
-	//----GALLERY---------------------------------------------------------------------------------------------------------
+	//----GALLERY------------------------------------------------
 	.gallery
 		@include mgThird
 		&__wrapper
@@ -380,11 +354,11 @@
 	.title
 		font-size: 1.6rem
 	
-	//----ABOUT---------------------------------------------------------------------------------------------------------
+	//----ABOUT--------------------------------------------------
 	.about
 		@include mgThird
 
-	//----FORM---------------------------------------------------------------------------------------------------------
+	//----FORM---------------------------------------------------
 	.form
 		@include mgThird
 		&__title
@@ -394,15 +368,9 @@
 	.form__contacts
 		width: 106%
 	
-	//----FOOTER---------------------------------------------------------------------------------------------------------
-	/* .footer
-		height: 88%
-	/* .blocks-wrapper
-		flex-direction: column */
-	
 //=====================================================================================================================
 @media (max-width: 455px)
-	//----FOOTER---------------------------------------------------------------------------------------------------------
+	//----FOOTER-------------------------------------------------
 	.footer
 		height: 100%
 		&__block
@@ -422,7 +390,7 @@
 
 //=====================================================================================================================
 @media (max-width: 421px)
-	//----TABS---------------------------------------------------------------------------------------------------------
+	//----TABS---------------------------------------------------
 	.tabs
 		&__btn
 			padding: 2rem 2.6rem
@@ -435,16 +403,14 @@
 		&__p-second
 			width: 100%
 	
-	//----FORM---------------------------------------------------------------------------------------------------------
+	//----FORM---------------------------------------------------
 	.form__contacts
 		width: 108%
-
-	//----FOOTER---------------------------------------------------------------------------------------------------------
 
 //=====================================================================================================================
 
 @media (max-width: 400px) //FOURTH BRAKE
-	//---MAINPAGE----------------------------------------------------------------------------------------------------------
+	//---MAINPAGE------------------------------------------------
 	.main
 		height: 700px
 		background: url(../img/bg/main_bg.jpg) 31% 32% no-repeat
@@ -470,7 +436,7 @@
 		width: 84%
 		padding: 1.5rem 1.4rem
 
-	//----TABS---------------------------------------------------------------------------------------------------------
+	//----TABS---------------------------------------------------
 	.tabs
 		@include mgFourth
 		&__btn
@@ -487,7 +453,7 @@
 			&-descr
 				padding: 0
 
-	//----GALLERY---------------------------------------------------------------------------------------------------------
+	//----GALLERY------------------------------------------------
 	.gallery
 		@include mgFourth
 		&__wrapper
@@ -495,11 +461,11 @@
 	.title
 		font-size: 1.2rem
 	
-	//----ABOUT---------------------------------------------------------------------------------------------------------
+	//----ABOUT--------------------------------------------------
 	.about
 		@include mgFourth
 	
-	//----FORM---------------------------------------------------------------------------------------------------------
+	//----FORM---------------------------------------------------
 	.form
 		@include mgThird
 		&__title
@@ -512,4 +478,3 @@
 		width: 100%
 		padding: inherit
 
-	//----FOOTER---------------------------------------------------------------------------------------------------------
