--- a/src/sass/base/_media.sass
+++ b/src/sass/base/_media.sass
@@ -44,7 +44,7 @@
 
 	//----GALLERY------------------------------------------------
 	.container_gallery
-		@include padFirst
+		//@include padFirst
 	.gallery
 		@include mgFirst
 	
@@ -144,6 +144,12 @@
 		@include padSecond
 	.form__contacts
 		width: 110%
+	
+	//----PAGEUP-------------------------------------------------
+	.pageup
+		bottom: 1rem
+		right: 1rem
+	
 
 //=====================================================================================================================
 
